@@ -1,3 +1,7 @@
+* Tue Jan 24 2017 Nick Miller <nick.miller@onyxpoint.com> - 4.0.0-0
+- Updated data types to use new Simplib types
+- Corrected simp_options lookups to not have a context prefix of '::'
+
 * Wed Dec 07 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 4.0.0-0
 - Use simp_options module for global catalysts
 - Fix bug in xinetd.service.erb that caused an inadvertant newline between the
